--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "description": "my first socket.io app",
   "dependencies": {
-    "express": "~4.3.1",
-    "socket.io": "~1.2.0"
+    "express": "^4.3.2",
+    "socket.io": "^1.2.0",
+    "valid-url": "^1.0.9"
   }
 }
