--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "0.0.1",
   "description": "my first socket.io app",
   "dependencies": {
+    "body-parser": "^1.9.2",
+    "cookie-parser": "^1.3.3",
     "express": "^4.10.1",
     "socket.io": "^1.2.0",
     "valid-url": "^1.0.9"
   },
   "repository": {
-	"type": "git",
-	"url": "https://github.com/dishark/chat-example/"
+    "type": "git",
+    "url": "https://github.com/dishark/chat-example/"
   },
   "scripts": {
-  	"start": "node index.js"
+    "start": "node index.js"
   }
 }
