--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "body-parser": "^1.9.2",
     "cookie-parser": "^1.3.3",
     "express": "^4.10.1",
+    "sanitize-html": "^1.4.3",
     "socket.io": "^1.2.0",
     "valid-url": "^1.0.9"
   },
